Bug Fixes for dark mode

--- a/html/resources/default/styles.css
+++ b/html/resources/default/styles.css
@@ -14,6 +14,12 @@ html {
   height: 100%;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
 
 .nav-background {
   width: 600px;
