--- a/html/resources/tim/timStyles.css
+++ b/html/resources/tim/timStyles.css
@@ -1,10 +1,3 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-}
-
 body {
   display: flex;
   flex-direction: column;
